--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,5 @@ markers =
         positive("Positive Test Cases")
         negative("Negative Test Cases")
         data_driven("Data Driven Test Cases")
-addopts = -n=5 -v -s --alluredir=C:\\Users\\rahul.rangaiah\\PycharmProjects\\Requests_POC\\Reports
-          --html=C:\\Users\\rahul.rangaiah\\PycharmProjects\\Requests_POC\\html_reports\\html_report.html
+addopts = -n=5 -v -s --alluredir=C:\\Users\\rahul.rangaiah\\Desktop\\My Files\\API_Automation_1\\reports
+          --html=C:\\Users\\rahul.rangaiah\\Desktop\\My Files\\API_Automation_1\\html_reports
